--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ main {
 .container {
     display:table-cell;
     width:100%;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 .calculator {
@@ -97,7 +97,6 @@ header h3 {
     height: 80px;
     padding: 15px;
     text-align: right;
-    font-size: 2.5rem;
     transition: all .2s ease;
 }
 
@@ -128,21 +127,23 @@ button {
     cursor: pointer;
 }
 
-button div {
+button span {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
+    text-align: center;
 }
 
+.equal,
 .numbers,
 .operators {
-    font-size: 2rem;
+    font-size: 2.8rem;
 }
 
 .reset-delete {
-    font-size: 1.2rem;
+    font-size: 1.7rem;
 }
 
 .action-button {
